<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Just Java</string>
    <string name="quantity">Quantity</string>
    <string name="toppings">TOPPINGS</string>
    <string name="price">ORDER SUMMARY</string>
    <string name="order_summary_name">Name:</string>
    <string name="whipped">Whipped Cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="appName">Just Java</string>
    <string name="appSecondaryName">A Coffee Ordering App</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="number">0</string>
    <string name="order">Order</string>
    <string name="thank_you">Thank you!</string>
    <string name="total">Total</string>
    <string name="value" translatable="false"></string>
</resources>
